--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+  <link rel="stylesheet" href="assets/social-feed-plugin/jquery.socialfeed.css">
+  <link rel="stylesheet" href="assets/social-feed-plugin/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -46,7 +50,14 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site for free</a></section><section class="cid-qTkAaeaxX5" id="footer1-2">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="mbr-social-feed loading" id="feed-4" data-facebook="JackJRonan" data-twitter="JackRonan" data-google="" data-posts="5" data-youtube="JackJoeR" data-rv-view="6" style="background-color: rgb(46, 46, 46); padding-top: 40px; padding-bottom: 0px;">
+    
+    <img class="social-feed-container-loading" alt="" src="assets/images/loading.svg">
+    <div class="social-feed-container">
+    </div>
+</section>
+
+<section class="cid-rbjIDHIE5N" id="footer1-3">
 
     
 
@@ -56,7 +67,7 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://mobirise.com/">
+                    <a href="https://mobirise.co/">
                         <img src="assets/images/logo2.png" alt="Mobirise">
                     </a>
                 </div>
@@ -85,9 +96,9 @@
                     Links
                 </h5>
                 <p class="mbr-text">
-                    <a class="text-primary" href="https://mobirise.com/">Website builder</a>
-                    <br><a class="text-primary" href="https://mobirise.com/mobirise-free-win.zip">Download for Windows</a>
-                    <br><a class="text-primary" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a>
+                    <a class="text-primary" href="https://mobirise.co/">Website builder</a>
+                    <br><a class="text-primary" href="https://mobirise.co/">Download for Windows</a>
+                    <br><a class="text-primary" href="https://mobirise.co/">Download for Mac</a>
                 </p>
             </div>
         </div>
@@ -147,8 +158,14 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/social-feed-plugin/codebird.min.js"></script>
+  <script src="assets/social-feed-plugin/moment.js"></script>
+  <script src="assets/social-feed-plugin/en-gb.js"></script>
+  <script src="assets/social-feed-plugin/doT.js"></script>
+  <script src="assets/social-feed-plugin/jquery.socialfeed.js"></script>
+  <script src="assets/social-feed-plugin/main.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
