--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Jack Ronan</h1>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1"><a href="index.html" class="text-white">Jack Ronan</a></h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Photo by Jennie Caldwell</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://www.youtube.com/JackJoeR" target="_blank">YOUTUBE</a> <a class="btn btn-md btn-primary display-4" href="https://twitter.com/JackRonan" target="_blank">TWITTER</a> <a class="btn btn-md btn-warning display-4" href="https://www.facebook.com/JackJRonan/" target="_blank">FACEBOOK</a>  
-                    <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-white display-4" href="social.html#feed-9"><span class="socicon socicon-rss mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>SOCIAL MEDIA</a> <a class="btn btn-md btn-white display-4" href="contact.html#form1-7"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>CONTACT ME</a>  <a class="btn btn-md btn-white display-4" href="http://www.jackronan.co.uk" target="_blank"><span class="mbri-user mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>SPOTLIGHT</a></div>
             </div>
         </div>
     </div>
@@ -50,7 +49,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="mbr-social-feed loading" id="feed-4" data-facebook="JackJRonan" data-twitter="JackRonan" data-google="" data-posts="5" data-youtube="JackJoeR" data-rv-view="6" style="background-color: rgb(46, 46, 46); padding-top: 40px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="mbr-social-feed loading" id="feed-4" data-facebook="JackJRonan" data-twitter="JackRonan" data-google="" data-posts="5" data-youtube="JackJoeR" data-rv-view="75" style="background-color: rgb(46, 46, 46); padding-top: 40px; padding-bottom: 0px;">
     
     <img class="social-feed-container-loading" alt="" src="assets/images/loading.svg">
     <div class="social-feed-container">
