--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section once="" class="cid-rbjWcqztRK" id="footer7-q">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section once="" class="cid-rbjWcqztRK" id="footer7-q">
 
     
 
