--- a/social.html
+++ b/social.html
@@ -47,7 +47,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="header1 cid-rbjRq13iBe" id="header1-h">
+<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section class="header1 cid-rbjRq13iBe" id="header1-h">
 
     
 
@@ -62,7 +62,7 @@
                     Find me on your favourite social media platform!</p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-white display-4" href="http://twitter.com/JackRonan" target="_blank"><span class="socicon socicon-twitter mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>
                         TWITTER</a>  <a class="btn btn-md btn-white display-4" href="https://www.facebook.com/JackJRonan/" target="_blank"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn" style="color: rgb(15, 118, 153);"></span>
-                        FACEBOOK</a>  <a class="btn btn-md btn-white display-4" href="https://www.facebook.com/JackJRonan/" target="_blank"><span class="socicon socicon-youtube mbr-iconfont mbr-iconfont-btn" style="color: rgb(204, 41, 82);"></span>
+                        FACEBOOK</a>  <a class="btn btn-md btn-white display-4" href="https://www.youtube.com/JackJoeR" target="_blank"><span class="socicon socicon-youtube mbr-iconfont mbr-iconfont-btn" style="color: rgb(204, 41, 82);"></span>
                         YOUTUBE</a></div>
             </div>
         </div>
