--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">
-                    <a href="index.html" class="text-white">Jack Ronan</a></h1>
+                    Jack Ronan</h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Photo by Jennie Caldwell</h3>
                 
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-white display-4" href="index.html#header2-1"><span class="mbri-home mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>HOME</a>   <a class="btn btn-md btn-white display-4" href="social.html#header1-f"><span class="socicon socicon-rss mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>SOCIAL MEDIA</a>   <a class="btn btn-md btn-white display-4" href="contact.html#header1-j"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section once="" class="cid-rbjWcqztRK" id="footer7-q">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="" class="cid-rbjWcqztRK" id="footer7-q">
 
     
 
