--- a/social.html
+++ b/social.html
@@ -40,7 +40,7 @@
                     Jack Ronan</h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Photo by Jennie Caldwell</h3>
                 
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-white display-4" href="index.html#header2-1"><span class="mbri-home mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>HOME</a>   <a class="btn btn-md btn-white display-4" href="social.html#header1-f"><span class="socicon socicon-rss mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>SOCIAL MEDIA</a>   <a class="btn btn-md btn-white display-4" href="contact.html#header1-j"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-white display-4" href="index.html#header2-1"><span class="mbri-home mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>HOME</a>   <a class="btn btn-md btn-white display-4" href="social.html#header1-f"><span class="mbri-sites mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>SOCIAL MEDIA</a>   <a class="btn btn-md btn-white display-4" href="contact.html#header1-j"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>
                         CONTACT ME</a></div>
             </div>
         </div>
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header1 cid-rbjRq13iBe" id="header1-h">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="header1 cid-rbjRq13iBe" id="header1-h">
 
     
 
