--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     Photo by Jennie Caldwell
                 </p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-white display-4" href="index.html"><span class="mbri-home mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>HOME</a> <a class="btn btn-md btn-white display-4" href="social.html"><span class="mbri-sites mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>SOCIAL MEDIA</a> <a class="btn btn-md btn-white display-4" href="contact.html"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>CONTACT ME</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-white display-4" href="index.html"><span class="mbri-home mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>&nbsp; &nbsp; &nbsp; &nbsp;HOME &nbsp; &nbsp; &nbsp; &nbsp;</a> <a class="btn btn-md btn-white display-4" href="social.html"><span class="mbri-sites mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>SOCIAL MEDIA</a> <a class="btn btn-md btn-white display-4" href="contact.html"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>&nbsp; CONTACT ME&nbsp;</a> <a class="btn btn-md btn-white display-4" href="https://www.spotlight.com/interactive/cv/4051-3493-3270" target="_blank"><span class="mbri-user mbr-iconfont mbr-iconfont-btn" style="color: rgb(20, 157, 204);"></span>&nbsp; &nbsp;SPOTLIGHT &nbsp;&nbsp;</a></div>
             </div>
         </div>
     </div>
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section once="" class="cid-rbjWcqztRK" id="footer7-q">
+<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section once="" class="cid-rbjWcqztRK" id="footer7-q">
 
     
 
