--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <link rel="stylesheet" href="style.less" class="cid-refFXPj1ji" id="menu1-5" data-rv-view="593"><section class="menu cid-refFXPj1ji" once="menu" id="menu1-5">
+  <link rel="stylesheet" href="style.less" class="cid-refFXPj1ji" id="menu1-5" data-rv-view="695"><section class="menu cid-refFXPj1ji" once="menu" id="menu1-5">
 
     
 
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="cid-rbk4nfrwJg mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=EFQeNi9s9pw&amp;feature=youtu.be" id="header2-3">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-rbk4nfrwJg mbr-fullscreen mbr-parallax-background" id="header2-3">
 
     
 
@@ -146,8 +146,7 @@
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
-  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
