--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <link rel="stylesheet" href="style.less" class="cid-refFXPj1ji" id="menu1-5" data-rv-view="503"><section class="menu cid-refFXPj1ji" once="menu" id="menu1-5">
+  <link rel="stylesheet" href="style.less" class="cid-refFXPj1ji" id="menu1-5" data-rv-view="164"><section class="menu cid-refFXPj1ji" once="menu" id="menu1-5">
 
     
 
@@ -64,7 +64,7 @@
             <div class="media-container">
                 <div class="col-md-12 align-center">
                     <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1"><br><br><br>Jack Ronan</h1>
-                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5"></p><p>Photo by Jennie Caldwell</p><p></p>
+                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">Photo by Jennie Caldwell</p><p></p><p></p>
                     
 
                     <div class="icons-media-container mbr-white">
